--- a/.cursormemory.md
+++ b/.cursormemory.md
@@ -6,17 +6,19 @@
 - Async unit tests are marked with `@pytest.mark.asyncio` to run under `pytest-asyncio` without relying on global pytest config.
 - HTML reports are produced via `pytest-html` with summary metadata populated from `backend/tests/conftest.py`.
 - Unit and integration coverage reports are generated inside the backend Docker container (Python 3.11) and written to `backend/reports/` via the compose volume mount.
+- Playwright coverage is enabled with `PW_COVERAGE=true` and writes reports to `functional_tests/coverage-report/`.
 
 ## Implementation Notes
 - Startup enqueues `startup_tasks`, which invokes `ensure_default_admin`.
 - Default admin credentials come from `Settings` (`admin_default_email`, `admin_default_name`, `admin_default_password`) and are provided via environment variables.
 - Worker metrics are exposed via Prometheus on `WORKER_METRICS_PORT` with a Celery `worker_ready` hook.
+- Logs are emitted as JSON to stdout and shipped to Grafana via Loki + Promtail from Docker container logs.
 - Grafana dashboards are provisioned from `grafana/provisioning/dashboards/` with Bedrock overview, backend, celery, and helpful graphs.
 - Prometheus alert rules are defined in `prometheus/alerts.yml` and loaded via `prometheus.yml`.
 ## Configuration Notes
-- JWT and admin bootstrap settings are required environment variables and are documented in `env.local` and the `env.*.example` templates.
+- JWT and admin bootstrap settings are required environment variables and are documented in `env.local` and `env.example`.
 - Tests seed required environment variables in `backend/tests/test_env.py` before loading settings.
-- Local Docker Compose uses `env.local` via `ENV_FILE`, while remote environments use `env.development`, `env.staging`, or `env.production` from their corresponding example templates.
+- Local Docker Compose uses `env.local` via `ENV_FILE`, and `env.example` is the template for new environments.
 - Frontend Docker builds accept a `VITE_API_URL` build arg to align with Vite build-time config.
 - Coverage reports for unit and integration tests are generated via `scripts/run_unit_tests.sh` and `scripts/run_integration_tests.sh`.
 - Test HTML reports include coverage summaries via `COVERAGE_XML_PATH` and `COVERAGE_HTML_PATH`.
