Harden file access checks

--- a/backend/translations/en.yml
+++ b/backend/translations/en.yml
@@ -15,9 +15,11 @@ errors:
     invalid_prefix: "Avatar file must be in avatars prefix"
     invalid_type: "File must be an image"
     invalid_usage: "File is not marked for avatar use"
+    invalid_usage_value: "Invalid file usage"
     key_empty: "File key cannot be empty"
     key_invalid_parts: "File key parts cannot be empty or contain path traversal sequences"
     not_found: "File not found"
+    record_create_failed: "File upload could not be completed"
     size_exceeds: "File size exceeds maximum allowed size ({max_size} bytes)"
     storage_key_required: "Storage key is required"
     storage_not_configured: "File storage service not configured"
